--- a/src/main/resources/templates/admin/products/UpdateProduct.html
+++ b/src/main/resources/templates/admin/products/UpdateProduct.html
@@ -35,7 +35,7 @@
                         <div class="mb-3">
                             <label for="description" class="form-label"
                             >Description</label>
-                            <input type="text" class="form-control" id="description" th:value="*{description}" required>
+                            <input type="text" class="form-control" id="description" th:field="*{description}" required>
                             <span th:if="${#fields.hasErrors('description')}" th:errorclass="text-danger"
                                   th:errors="${productDTO.description}"></span>
                         </div>
@@ -67,7 +67,9 @@
                         <div class="mb-3">
                             <label for="brandId" class="form-label">Brand</label>
                             <select id="brandId" name="brandId" class="form-select" required>
-                                <option selected disabled>Choose brand</option>
+                                <option selected disabled
+                                        th:value="${product.brand.id}"
+                                        th:text="${product.brand.name}"></option>
                                 <option
                                         th:each="brand : ${brandsList}"
                                         th:value="${brand.id}"
@@ -77,7 +79,10 @@
                         <div class="mb-3">
                             <label for="categoryId" class="form-label">Category</label>
                             <select id="categoryId" name="categoryId" class="form-select" required>
-                                <option selected disabled>Choose category</option>
+                                <option selected disabled
+                                        th:value="${product.category.id}"
+                                        th:text="${product.category.name}">
+                                </option>
                                 <option
                                         th:each="category : ${categoriesList}"
                                         th:value="${category.id}"
@@ -105,7 +110,6 @@
                              width="200px;" height="200px;">
                     </div>
                 </div>
-
 
             </form>
         </div>
