--- a/src/main/resources/templates/admin/products/index.html
+++ b/src/main/resources/templates/admin/products/index.html
@@ -53,7 +53,7 @@
                                                th:href="@{/admin/products/update (id=${product.id})}"><i
                                                     class="bi bi-pencil-square"></i> Edit</a>
                                             <a class="btn btn-danger btn-sm" style="width: 70px;"
-                                               th:href="@{/products/delete (id=${product.id})}"
+                                               th:href="@{/admin/products/delete(id=${product.id})}"
                                                onclick="return confirm('Are you sure?')"><i class="bi bi-trash3"></i>
                                                 Delete</a>
                                         </div>
