--- a/src/main/resources/templates/admin/products/CreateProduct.html
+++ b/src/main/resources/templates/admin/products/CreateProduct.html
@@ -92,7 +92,7 @@
                     <button class="col-md-6 btn btn-primary mx-3" style="width: 300px;">
                         Create product
                     </button>
-                    <a class="col-md-6 btn btn-secondary mx-3" style="width: 300px; text-align: center;">Cancel</a>
+                    <a th:href="@{/admin/products}" class="col-md-6 btn btn-secondary mx-3">Cancel</a>
                 </div>
             </form>
         </div>
