create security config

--- a/src/main/resources/templates/admin/login/login.html
+++ b/src/main/resources/templates/admin/login/login.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-
+<h1>Day la trang login ma khi khong chap nhan request voi cua hinh spring security</h1>
 </body>
 </html>
