--- a/src/main/resources/templates/admin/login/register.html
+++ b/src/main/resources/templates/admin/login/register.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-
+<h1>Register</h1>
+<form th:action="@{/register}" th:object="${user}" method="post">
+    <div>
+        <label for="phone">Phone Number:</label>
+        <input type="text" id="phone" th:field="*{phoneNumber}" required/>
+    </div>
+    <div>
+        <label for="fullName">Full Name:</label>
+        <input type="text" id="fullName" th:field="*{fullName}" required/>
+    </div>
+    <div>
+        <label for="password">Password:</label>
+        <input type="password" id="password" th:field="*{password}" required/>
+    </div>
+    <div>
+        <button type="submit">Register</button>
+    </div>
+    <div th:if="${error}">
+        <p th:text="${error}"></p>
+    </div>
+</form>
 </body>
 </html>
