--- a/src/main/resources/templates/admin/products/index.html
+++ b/src/main/resources/templates/admin/products/index.html
@@ -66,9 +66,10 @@
                 </div>
             </div>
         </div>
+        <div th:replace="fragments/footer :: footer">
+        </div>
     </div>
 </div>
-
 <div th:replace="fragments/scripts :: scripts"></div>
 </body>
 </html>
