--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -76,7 +76,7 @@
                         <span class="hide-menu">AUTH</span>
                     </li>
                     <li class="sidebar-item">
-                        <a class="sidebar-link" href="./authentication-login.html" aria-expanded="false">
+                        <a class="sidebar-link" th:href="@{/login}" aria-expanded="false">
                 <span>
                   <iconify-icon th:icon="@{solar:login-3-bold-duotone}"></iconify-icon>
                 </span>
@@ -84,7 +84,7 @@
                         </a>
                     </li>
                     <li class="sidebar-item">
-                        <a class="sidebar-link" href="./authentication-register.html" aria-expanded="false">
+                        <a class="sidebar-link" th:href="@{/register}" aria-expanded="false">
                 <span>
                   <iconify-icon th:icon="@{solar:user-plus-rounded-bold-duotone}"></iconify-icon>
                 </span>
