--- a/src/main/resources/templates/admin/login/login.html
+++ b/src/main/resources/templates/admin/login/login.html
@@ -1,25 +1,52 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace="fragments/head :: head">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Form</title>
+    <style>
+        .hover-underline:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-<h1>Day la trang login ma khi khong chap nhan request voi cua hinh spring security</h1>
-<h1>Login</h1>
-<form th:action="@{/login}" method="post">
-    <div>
-        <label for="phone">Phone Number:</label>
-        <input type="text" id="phone" name="username" required/>
+<div class="container mt-3 pt-5">
+    <div class="row">
+        <img th:src="@{/assets/admin/resource_admin/images/logos/UTElogo.png}" alt="University logo"
+             class="rounded-circle mx-auto" style="width: 200px; height: 180px;">
     </div>
-    <div>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required/>
+    <div class="row">
+        <div class="col-12 col-sm-8 col-md-6 m-auto border">
+            <div class="card">
+                <div class="card-title text-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor"
+                         class="bi bi-person-circle mx-auto" viewBox="0 0 16 16">
+                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                        <path fill-rule="evenodd"
+                              d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                    </svg>
+                </div>
+                <div class="card-body">
+                    <form th:action="@{/login}" method="post">
+                        <input type="text" name="username" placeholder="Phone number"
+                               class="form-control my-4 py-2" required/>
+                        <input type="password" placeholder="Password" name="password"
+                               class="form-control my-4 py-2" required/>
+                        <div class="text-center my-2">
+                            <button type="submit" class="btn btn-primary mb-2">Login</button>
+                            <a th:href="@{/register}" class="nav-link mx-auto text-decoration-none hover-underline">Already
+                                have an
+                                account ?</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-    <div>
-        <button type="submit">Login</button>
-        <a th:href="@{/register}">Đăng ký</a>
-    </div>
-</form>
+</div>
+<div th:replace="fragments/footer :: footer">
+
+</div>
 </body>
 </html>
