modifier | fix feature login and custome UI

--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="fragments/head :: head">
-    <title th:text="${pageTitle}"></title>
+<head>
+    <div th:replace="fragments/head :: head"></div>
+    <title th:text="${titleDashboard}"></title>
 </head>
 <body>
 <!--  Body Wrapper -->
