--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -2,22 +2,22 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <div th:replace="fragments/head :: head"></div>
+    <div th:replace="~{fragments/head :: head}"></div>
     <title th:text="${titleDashboard}"></title>
 </head>
 <body>
 <!--  Body Wrapper -->
 <div class="page-wrapper" id="main-wrapper" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full"
      data-sidebar-position="fixed" data-header-position="fixed">
-    <div th:replace="fragments/sidebar :: sidebar"></div>
+    <div th:replace="~{fragments/sidebar :: sidebar}"></div>
     <!--  Main wrapper -->
     <div class="body-wrapper">
-        <div th:replace="fragments/header :: header"></div>
-        <div th:replace="fragments/content :: content"></div>
-        <div th:replace="fragments/footer :: footer"></div>
+        <div th:replace="~{fragments/header :: header}"></div>
+        <div th:replace="~{fragments/content :: content}"></div>
+        <div th:replace="~{fragments/footer :: footer}"></div>
     </div>
 </div>
-<div th:replace="fragments/scripts :: scripts"></div>
+<div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 
 </html>
