--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/head :: head">
-    <title>Login Form</title>
-</head>
+<div th:replace="~{fragments/head :: head}"></div>
 <body>
 <div class="container mt-3 pt-5">
     <div class="row">
@@ -38,7 +36,7 @@
         </div>
     </div>
 </div>
-<div th:replace="fragments/footer :: footer">
+<div th:replace="~{fragments/footer :: footer}">
 
 </div>
 </body>
