--- a/src/main/resources/templates/login/register.html
+++ b/src/main/resources/templates/login/register.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <!--<title>Registration Form in HTML CSS</title>-->
     <!---Custom CSS File--->
-    <link rel="stylesheet" th:href="@{/static/assets/admin/css/style.css}"/>
+    <link rel="stylesheet" th:href="@{/assets/admin/css/style.css}"/>
     <style>
         /* Import Google font - Poppins */
         @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
@@ -215,7 +215,7 @@
             <label for="address">Address</label>
             <input type="text" id="address" th:field="*{address}" placeholder="Enter street address" required/>
         </div>
-        <button>Submit</button>
+        <button type="submit">Submit</button>
     </form>
 </section>
 </body>
