--- a/src/main/resources/templates/admin/products/index.html
+++ b/src/main/resources/templates/admin/products/index.html
@@ -15,12 +15,33 @@
                 <div class="col-lg-12">
                     <div class="card">
                         <div class="card-body">
-                            <p>Welcome, <span th:text="${session.username}">!</span></p>
-                            <h5 class="card-title d-flex align-items-center gap-2 mb-4">
-                                Quản lý sản phẩm
-                            </h5>
-                            <a class="btn btn-primary text-white mb-3" th:href="@{/admin/products/create}">Create
-                                product</a>
+                            <div class="card-title container d-flex align-items-center gap-2 p-3">
+                                <h2 class="">
+                                    Quản lý sản phẩm
+                                </h2>
+                                <a class="btn btn-primary text-white d-flex justify-content-lg-end"
+                                   th:href="@{/admin/products/create}">Create
+                                    product</a>
+                            </div>
+                            <form>
+                                <div class="input-group input-group-sm hidden-xs mb-2 d-flex justify-content-end"
+                                     style="width:300px;">
+                                    <input type="text" name="keyword" class="form-control pull-right"
+                                           placeholder="Search product"
+                                           th:value="${keyword}">
+                                    <div class="input-group-btn">
+                                        <button type="submit" class="btn btn-secondary">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                 fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                                                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                                            </svg>
+                                        </button>
+                                    </div>
+                                </div>
+
+                            </form>
+
+
                             <table class="table table-striped table-bordered">
                                 <thead class="table-dark">
                                 <tr>
