--- a/src/main/resources/templates/admin/products/index.html
+++ b/src/main/resources/templates/admin/products/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:include="~{fragments/head :: head}">
+<head th:insert="~{fragments/head :: head}">
     <title th:text="${pageTitle}"></title>
+    <style>
+        .pagination-square {
+            width: 50px;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 1px solid #007bff;
+            border-radius: 5px;
+            margin: 5px;
+            background-color: #f8f9fa;
+            color: #007bff;
+        }
+
+        .pagination-square:hover {
+            background-color: #007bff;
+            color: white;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
 <div class="page-wrapper" id="main-wrapper" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full"
@@ -83,6 +103,27 @@
                                 </tr>
                                 </tbody>
                             </table>
+                            <div class="d-flex justify-content-center mt-3">
+                                <ul class="pagination-square pagination">
+                                    <!-- Nút trang trước -->
+                                    <li class="page-item">
+                                        <a class="page-link" th:href="@{'?pageNo={num}'(num=${currentPage - 1})}"
+                                           th:if="${currentPage > 1}"> << </a>
+                                    </li>
+
+                                    <!-- Số trang -->
+                                    <li class="page-item" th:each="i : ${#numbers.sequence(1, totalPages)}"
+                                        th:classappend="${currentPage == i} ? 'active'">
+                                        <a class="page-link" th:href="@{'?pageNo={num}'(num=${i})}" th:text="${i}"></a>
+                                    </li>
+
+                                    <!-- Nút trang sau -->
+                                    <li class="page-item">
+                                        <a class="page-link" th:href="@{'?pageNo={num}'(num=${currentPage + 1})}"
+                                           th:if="${currentPage < totalPages}"> >> </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
