build form | background for user particular

--- a/src/main/resources/templates/common-user/footer.html
+++ b/src/main/resources/templates/common-user/footer.html
@@ -14,16 +14,15 @@
                         </a>
                     </div> -->
                         <div class="inner">
-                            <p>685 Market Street, <br>
-                                Las Vegas, LA 95820, <br>
-                                United States.
+                            <p>Đường số 1 Võ Văn Ngân, <br>
+                                Phường Linh Chiểu - Thủ Đức, <br>
+                                Thành phố Hồ Chí Minh.
                             </p>
                             <ul class="support-list-item">
-                                <li><a href="mailto:example@domain.com"><i class="fal fa-envelope-open"></i>
-                                    example@domain.com</a></li>
-                                <li><a href="tel:(+01)850-315-5862"><i class="fal fa-phone-alt"></i> (+01) 850-315-5862</a>
+                                <li><a th:href="@{/user/getEmail}"><i class="fal fa-envelope-open"></i>
+                                    hieu01bdvn@gmail.com</a></li>
+                                <li><a href="tel:(+01)850-315-5862"><i class="fal fa-phone-alt"></i> (+01) 850-315-8386</a>
                                 </li>
-                                <!-- <li><i class="fal fa-map-marker-alt"></i> 685 Market Street,  <br> Las Vegas, LA 95820, <br> United States.</li> -->
                             </ul>
                         </div>
                     </div>
@@ -36,9 +35,9 @@
                         <div class="inner">
                             <ul>
                                 <li><a href="my-account.html">My Account</a></li>
-                                <li><a href="sign-up.html">Login / Register</a></li>
-                                <li><a href="cart.html">Cart</a></li>
-                                <li><a href="wishlist.html">Wishlist</a></li>
+                                <li><a th:href="@{/login}">Login / Register</a></li>
+                                <li><a th:href="@{/user/cart}">Cart</a></li>
+                                <li><a th:href="@{/user/wishlist}">Wishlist</a></li>
                                 <li><a href="shop.html">Shop</a></li>
                             </ul>
                         </div>
@@ -61,29 +60,6 @@
                     </div>
                 </div>
                 <!-- End Single Widget  -->
-                <!-- Start Single Widget  -->
-                <div class="col-lg-3 col-sm-6">
-                    <div class="axil-footer-widget">
-                        <h5 class="widget-title">Download App</h5>
-                        <div class="inner">
-                            <span>Save $3 With App & New User only</span>
-                            <div class="download-btn-group">
-                                <div class="qr-code">
-                                    <img src="assets/images/others/qr.png" alt="Axilthemes">
-                                </div>
-                                <div class="app-link">
-                                    <a href="#">
-                                        <img src="assets/images/others/app-store.png" alt="App Store">
-                                    </a>
-                                    <a href="#">
-                                        <img src="assets/images/others/play-store.png" alt="Play Store">
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- End Single Widget  -->
             </div>
         </div>
     </div>
@@ -94,17 +70,18 @@
             <div class="row align-items-center">
                 <div class="col-xl-4">
                     <div class="social-share">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/hiuu_ne/"><i class="fab fa-instagram"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://github.com/Hieu-with-love"><i class="fab fa-github-alt"></i></a>
                         <a href="#"><i class="fab fa-discord"></i></a>
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-12">
                     <div class="copyright-left d-flex flex-wrap justify-content-center">
                         <ul class="quick-link">
-                            <li>© 2023. All rights reserved by <a target="_blank" href="https://axilthemes.com/">Axilthemes</a>.
+                            <li>© 2024. All rights reserved by <a target="_blank"
+                                                                  href="https://github.com/Hieu-with-love">devzeus</a>.
                             </li>
                         </ul>
                     </div>
@@ -113,9 +90,9 @@
                     <div class="copyright-right d-flex flex-wrap justify-content-xl-end justify-content-center align-items-center">
                         <span class="card-text">Accept For</span>
                         <ul class="payment-icons-bottom quick-link">
-                            <li><img src="assets/images/icons/cart/cart-1.png" alt="paypal cart"></li>
-                            <li><img src="assets/images/icons/cart/cart-2.png" alt="paypal cart"></li>
-                            <li><img src="assets/images/icons/cart/cart-5.png" alt="paypal cart"></li>
+                            <li><img th:src="@{/etrade/assets/images/icons/cart/cart-1.png}" alt="paypal cart"></li>
+                            <li><img th:src="@{/etrade/assets/images/icons/cart/cart-2.png}" alt="paypal cart"></li>
+                            <li><img th:src="@{/etrade/assets/images/icons/cart/cart-5.png}" alt="paypal cart"></li>
                         </ul>
                     </div>
                 </div>
