--- a/src/main/resources/templates/common-user/header.html
+++ b/src/main/resources/templates/common-user/header.html
@@ -1,5 +1,4 @@
-<div th:fragemtn="header">
-
+<header th:fragment="header" class="header axil-header header-style-1">
     <div th:fragment="title">
         <div class="header-top-campaign">
             <div class="container position-relative">
@@ -58,11 +57,14 @@
     <div th:fragment="feature-bar">
         <!-- Start Mainmenu Area  -->
         <div id="axil-sticky-placeholder"></div>
-        <div class="axil-mainmenu">
+        <div class="axil-mainmenu" style=" position: sticky;
+                                           top: 0;
+                                           z-index: 1000;
+                                                                ">
             <div class="container">
                 <div class="header-navbar">
                     <div class="header-brand">
-                        <a href="#" class="logo logo-dark">
+                        <a th:href="@{/user}" class="logo logo-dark">
                             <img th:src="@{etrade/assets/images/logo/logo.png}" alt="Site Logo">
                         </a>
                         <a href="#" class="logo logo-light">
@@ -72,16 +74,15 @@
                     <div class="header-main-nav">
                         <!-- Start Mainmanu Nav -->
                         <nav class="mainmenu-nav">
-                            <button class="mobile-close-btn mobile-nav-toggler"><i class="fas fa-times"></i></button>
+                            <button class="mobile-close-btn mobile-nav-toggler"><i class="fas fa-times"></i>
+                            </button>
                             <div class="mobile-nav-brand">
                                 <a href="index.html" class="logo">
                                     <img th:src="@{etrade/assets/images/logo/logo.png}" alt="Site Logo">
                                 </a>
                             </div>
                             <ul class="mainmenu">
-                                <li class="menu-item-has-children">
-                                    <a th:href="@{/user}">Home</a>
-                                </li>
+                                <li><a th:href="@{/user}">Home</a></li>
                                 <li class="menu-item-has-children">
                                     <a href="#">Shop</a>
                                     <ul class="axil-submenu">
@@ -190,6 +191,4 @@
         </div>
         <!-- End Mainmenu Area -->
     </div>
-
-
-</div>
+</header>
