--- a/src/main/resources/templates/common-user/header.html
+++ b/src/main/resources/templates/common-user/header.html
@@ -172,9 +172,9 @@
                                         </li>
                                     </ul>
                                     <div class="login-btn">
-                                        <a href="sign-in.html" class="axil-btn btn-bg-primary">Login</a>
+                                        <a th:href="@{/logout}" class="axil-btn btn-bg-primary">Logout</a>
                                     </div>
-                                    <div class="reg-footer text-center">No account yet? <a href="sign-up.html"
+                                    <div class="reg-footer text-center">No account yet? <a th:href="@{/register}"
                                                                                            class="btn-link">REGISTER
                                         HERE.</a></div>
                                 </div>
