--- a/src/main/resources/templates/login/register.html
+++ b/src/main/resources/templates/login/register.html
@@ -1,222 +1,113 @@
 <!DOCTYPE html>
 <!---Coding By CodingLab | www.codinglabweb.com--->
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <!--<title>Registration Form in HTML CSS</title>-->
-    <!---Custom CSS File--->
-    <link rel="stylesheet" th:href="@{/assets/admin/css/style.css}"/>
-    <style>
-        /* Import Google font - Poppins */
-        @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: "Poppins", sans-serif;
-        }
-
-        body {
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 20px;
-            background: rgb(130, 106, 251);
-        }
-
-        .container {
-            position: relative;
-            max-width: 700px;
-            width: 100%;
-            background: #fff;
-            padding: 25px;
-            border-radius: 8px;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-        }
-
-        .container header {
-            font-size: 1.5rem;
-            color: #333;
-            font-weight: 500;
-            text-align: center;
-        }
-
-        .container .form {
-            margin-top: 30px;
-        }
-
-        .form .input-box {
-            width: 100%;
-            margin-top: 20px;
-        }
-
-        .input-box label {
-            color: #333;
-        }
-
-        .form :where(.input-box input, .select-box) {
-            position: relative;
-            height: 50px;
-            width: 100%;
-            outline: none;
-            font-size: 1rem;
-            color: #707070;
-            margin-top: 8px;
-            border: 1px solid #ddd;
-            border-radius: 6px;
-            padding: 0 15px;
-        }
-
-        .input-box input:focus {
-            box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-        }
-
-        .form .column {
-            display: flex;
-            column-gap: 15px;
-        }
-
-        .form .gender-box {
-            margin-top: 20px;
-        }
-
-        .gender-box h3 {
-            color: #333;
-            font-size: 1rem;
-            font-weight: 400;
-            margin-bottom: 8px;
-        }
-
-        .form :where(.gender-option, .gender) {
-            display: flex;
-            align-items: center;
-            column-gap: 50px;
-            flex-wrap: wrap;
-        }
-
-        .form .gender {
-            column-gap: 5px;
-        }
-
-        .gender input {
-            accent-color: rgb(130, 106, 251);
-        }
-
-        .form :where(.gender input, .gender label) {
-            cursor: pointer;
-        }
-
-        .gender label {
-            color: #707070;
-        }
-
-        .address :where(input, .select-box) {
-            margin-top: 15px;
-        }
-
-        .select-box select {
-            height: 100%;
-            width: 100%;
-            outline: none;
-            border: none;
-            color: #707070;
-            font-size: 1rem;
-        }
-
-        .form button {
-            height: 55px;
-            width: 100%;
-            color: #fff;
-            font-size: 1rem;
-            font-weight: 400;
-            margin-top: 30px;
-            border: none;
-            cursor: pointer;
-            transition: all 0.2s ease;
-            background: rgb(130, 106, 251);
-        }
-
-        .form button:hover {
-            background: rgb(88, 56, 250);
-        }
-
-        /*Responsive*/
-        @media screen and (max-width: 500px) {
-            .form .column {
-                flex-wrap: wrap;
-            }
-
-            .form :where(.gender-option, .gender) {
-                row-gap: 15px;
-            }
-        }
-    </style>
+<head th:insert="~{common-user/head :: head}">
+    <title>LaptopShop || Sign Up</title>
 </head>
 <body>
-<section class="container">
-    <header>Registration Form</header>
-    <form action="/register" method="post" class="form" th:object="${newUserDTO}">
-        <div class="input-box">
-            <label for="fullName">Full Name</label>
-            <input type="text" id="fullName" th:field="*{fullName}" placeholder="Enter full name" required/>
+<div class="axil-signin-area">
+    <!-- Start Header -->
+    <div class="signin-header">
+        <div class="row align-items-center">
+            <div class="col-md-6">
+                <a href="index.html" class="site-logo"><img th:src="@{/etradeassets/images/logo/logo.png}"
+                                                            alt="logo"></a>
+            </div>
+            <div class="col-md-6">
+                <div class="singin-header-btn">
+                    <p>Already a member?</p>
+                    <a href="sign-in.html" class="axil-btn btn-bg-secondary sign-up-btn">Sign In</a>
+                </div>
+            </div>
         </div>
+    </div>
+    <!-- End Header -->
 
-        <div class="input-box">
-            <label for="email">Email Address</label>
-            <input type="text" id="email" th:field="*{email}" placeholder="Enter email address" required/>
+    <div class="row">
+        <div class="col-xl-4 col-lg-6">
+            <div class="axil-signin-banner bg_image bg_image--10">
+                <h3 class="title">We Offer the Best Products</h3>
+            </div>
         </div>
+        <div class="col-lg-6 offset-xl-2">
+            <div class="axil-signin-form-wrap">
+                <div class="axil-signin-form">
+                    <h3 class="title">I'm New Here</h3>
+                    <p class="b2 mb--55">Enter your detail below</p>
+                    <form class="singin-form"
+                          method="post"
+                          th:action="@{/register}"
+                          th:object="${registerUser}"
+                    >
+                        <div class="form-group">
+                            <label>Phone Number</label>
+                            <input type="text" class="form-control"
+                                   th:field="*{phoneNumber}"
+                                   placeholder="Enter phone number"
+                                   required
+                            >
+                        </div>
+                        <div class="form-group">
+                            <label>Email</label>
+                            <input type="email" class="form-control" th:field="*{email}"
+                                   placeholder="Enter email"
+                                   required
+                            >
+                        </div>
+                        <div class="form-group">
+                            <label>Password</label>
+                            <input type="password" class="form-control" th:field="*{password}"
+                                   placeholder="Enter password"
+                                   required
+                            >
+                        </div>
+                        <div class="form-group">
+                            <label>Confirm password</label>
+                            <input type="password" class="form-control" th:field="*{confirmPassword}"
+                                   placeholder="Enter password again"
+                                   required
+                            >
+                        </div>
+                        <div class="form-group">
+                            <label>Full Name</label>
+                            <input type="text" class="form-control" th:field="*{fullName}"
+                                   placeholder="Enter full name">
+                        </div>
+                        <div class="form-group">
+                            <label>Birth day</label>
+                            <input type="date" class="form-control" th:field="*{dayOfBirth}"
+                                   placeholder="Enter birth day">
+                        </div>
+                        <div class="form-group">
+                            <div class="gender-box">
+                                <h3>Gender</h3>
+                                <div class="gender-option">
+                                    <div class="gender">
+                                        <input type="radio" id="check-male" name="gender" value="Nam" checked/>
+                                        <label for="check-male">male</label>
+                                    </div>
+                                    <div class="gender">
+                                        <input type="radio" id="check-female" name="gender" value="Nữ"/>
+                                        <label for="check-female">Female</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label>Address</label>
+                            <input type="text" class="form-control" th:field="*{address}"
+                                   placeholder="Enter address">
+                        </div>
 
-        <div class="column">
-            <div class="input-box">
-                <label for="phoneNumber">Phone Number</label>
-                <input type="number" id="phoneNumber" th:field="*{phoneNumber}" placeholder="Enter phone number"
-                       required/>
-            </div>
-            <div class="input-box">
-                <label for="dayOfBirth">Birth Date</label>
-                <input type="date" id="dayOfBirth" th:field="*{dayOfBirth}" placeholder="Enter birth date" required/>
-            </div>
-        </div>
-        <div class="column">
-            <div class="input-box">
-                <label for="password">Password</label>
-                <input type="password" id="password" th:field="*{password}" placeholder="Enter password" required>
-            </div>
-        </div>
-        <div class="column">
-            <div class="input-box">
-                <label for="confirmPassword">Confirm Password</label>
-                <input type="password" id="confirmPassword" th:field="*{confirmPassword}" placeholder="Enter password"
-                       required>
-            </div>
-        </div>
-        <div class="gender-box">
-            <h3>Gender</h3>
-            <div class="gender-option">
-                <div class="gender">
-                    <input type="radio" id="check-male" th:field="*{gender}" value="male" checked/>
-                    <label for="check-male">Male</label>
-                </div>
-                <div class="gender">
-                    <input type="radio" id="check-female" th:field="*{gender}" value="female"/>
-                    <label for="check-female">Female</label>
-                </div>
-                <div class="gender">
-                    <input type="radio" id="check-other" th:field="*{gender}" value="no"/>
-                    <label for="check-other">Prefer not to say</label>
+                        <div class="form-group">
+                            <button type="submit" class="axil-btn btn-bg-primary submit-btn">Create Account</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
-        <div class="input-box address">
-            <label for="address">Address</label>
-            <input type="text" id="address" th:field="*{address}" placeholder="Enter street address" required/>
-        </div>
-        <button type="submit">Submit</button>
-    </form>
-</section>
+    </div>
+</div>
+<div th:insert="~{common-user/script :: script}"></div>
 </body>
 </html>
